# esp32-wifi-gnss

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
freertos/: FreeRTOS.h  FreeRTOSConfig.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_version.c  app_version.h  generic_task.c  generic_task.h  gnss.c  gnss.h  http_stream.c  http_stream.h  log_stream.c  log_stream.h  ota_update.c  ota_update.h  wifi_ap.c  wifi_ap.h
tools/: hardware_ota_test.py
